[package]
name = "cats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.5", features = ["csr"] }
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1" }
log = "0.4"
gloo = { version = "0.11.0", features = ["timers"] }
